--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,9 @@
 sonar.projectKey=joaofreittas_fc-ci-js-exercise
 sonar.organization=joaofreittas-1
+
+sonar.sources=src
+sonar.exclusions=**/*.test.js
+sonar.test=src/tests
+sonar.test.inclusions=**/*.test.js
+sonar.javascript.coveragePlugin=lcov
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
